--- a/app/src/main/res/drawable/ic_ngoisao.xml
+++ b/app/src/main/res/drawable/ic_ngoisao.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FFD700"
+        android:fillColor="#E9C610"
         android:pathData="M12,2L15,8L22,9L17,14L18,21L12,18L6,21L7,14L2,9L9,8L12,2Z" />
 </vector>
