--- a/app/src/main/res/layout/activity_subtraction.xml
+++ b/app/src/main/res/layout/activity_subtraction.xml
@@ -9,12 +9,19 @@
 
     >
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/anh6">
+
+    </View>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <!-- Addition -->
+
         <LinearLayout
             android:id="@+id/Bangtru_button"
             android:layout_width="180dp"
@@ -31,7 +38,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_subtraction" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,7 +65,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_hoanghon" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,7 +98,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_ngoisao" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -118,7 +125,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_sun" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -151,7 +158,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_mua" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -178,7 +185,7 @@
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_addition" />
+                android:src="@drawable/ic_may" />
 
             <TextView
                 android:layout_width="wrap_content"
