--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -27,7 +27,7 @@
             android:layout_width="394dp"
             android:layout_height="120dp"
             android:gravity="center">
-            <!-- Addition -->
+
             <LinearLayout
                 android:id="@+id/addition_button"
                 android:layout_width="170dp"
@@ -163,7 +163,7 @@
 
             <!-- Random -->
             <LinearLayout
-                android:id="@+id/random_button"
+                    android:id="@+id/luyentaptoan_button"
                 android:layout_width="170dp"
                 android:layout_height="100dp"
                 android:layout_margin="8dp"
@@ -181,61 +181,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/random"
-                    android:textColor="@color/text_color"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="394dp"
-            android:layout_height="120dp"
-            android:gravity="center">
-
-            <LinearLayout
-                android:id="@+id/settings_button"
-                android:layout_width="170dp"
-                android:layout_height="100dp"
-                android:layout_margin="8dp"
-                android:background="@drawable/item_background_square"
-                android:backgroundTint="@color/green_200"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="8dp">
-
-                <ImageView
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/ic_baocao" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/luyentap"
-                    android:textColor="@color/text_color"
-                    android:textSize="18sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/rank_button"
-                android:layout_width="170dp"
-                android:layout_height="100dp"
-                android:layout_margin="8dp"
-                android:background="@drawable/item_background_square"
-                android:backgroundTint="@color/blue_200"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="8dp">
-
-                <ImageView
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/ic_rank" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/rank"
                     android:textColor="@color/text_color"
                     android:textSize="18sp" />
             </LinearLayout>
