đổi tên lại cho dễ maintain

--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/orange"
-    tools:context=".fragment.TrangChu">
+    tools:context=".fragment.TrangChuFragment">
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
