--- a/app/src/main/res/layout/fragment_cai_dat.xml
+++ b/app/src/main/res/layout/fragment_cai_dat.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".fragment.CaiDat">
+    tools:context=".fragment.CaiDatFragment">
 
 
     <Toolbar
