--- a/app/src/main/res/layout/activity_phep_nhan.xml
+++ b/app/src/main/res/layout/activity_phep_nhan.xml
@@ -5,9 +5,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@color/background_color"
-    android:gravity="center"
-
-    >
+    android:gravity="center">
 
     <View
         android:layout_width="wrap_content"
@@ -19,7 +17,7 @@
         android:layout_height="wrap_content"
         android:gravity="center">
 
-        <!-- Addition -->
+
         <LinearLayout
             android:id="@+id/bangnhan_button"
             android:layout_width="180dp"
