--- a/app/src/main/res/layout/fragment_xep_hang.xml
+++ b/app/src/main/res/layout/fragment_xep_hang.xml
@@ -7,7 +7,7 @@
     tools:context=".fragment.XepHangFragment">
 
 
-    <Toolbar
+    <View
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="250dp"
