--- a/app/src/main/res/layout/fragment_cai_dat.xml
+++ b/app/src/main/res/layout/fragment_cai_dat.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,23 +36,8 @@
             android:id="@+id/nhacnen"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Nhạc nền" />
-
-        <TextView
-            android:id="@+id/btn_child_profile"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:drawableRight="@drawable/ic_chill"
-            android:gravity="center_vertical"
-            android:text="Hồ sơ của trẻ" />
-
-        <TextView
-            android:id="@+id/btn_result_reports"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:drawableRight="@drawable/ic_baocao"
-            android:gravity="center_vertical"
-            android:text="Báo cáo kết quả" />
+            android:text="@string/nhac_nen"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     </LinearLayout>
 
