--- a/app/src/main/res/layout/danh_sach_nguoi_dung.xml
+++ b/app/src/main/res/layout/danh_sach_nguoi_dung.xml
@@ -3,25 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
-    android:backgroundTint="@color/green_200"
-    android:background="?attr/selectableItemBackground"
-    android:gravity="center_vertical">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/name_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Name"
-        android:textSize="32sp"
-        android:textColor="@android:color/black" />
+        android:text="@string/ten"
+        android:textSize="16sp"
+        style="@style/NameTextViewStyle" />
 
     <TextView
         android:id="@+id/score_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score"
-        android:textSize="24sp"
-        android:textColor="@android:color/black" />
+        android:text="@string/diem"
+        android:textSize="16sp"
+        style="@style/ScoreTextViewStyle" />
 </LinearLayout>
